// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Storybook snapshots > Button > Default 1`] = `
<div>
  <button
    class="_button_4f0108"
  >
    Start
  </button>
</div>
`;

exports[`Storybook snapshots > Button > Disabled 1`] = `
<div>
  <button
    class="_button_4f0108"
    disabled=""
  >
    Start
  </button>
</div>
`;

exports[`Storybook snapshots > Editor > Default 1`] = `
<div>
  <textarea
    class="_textarea_4a5fca"
    style="height: 0px;"
  >
    The old wooden chair creaked under the weight of memory.
  </textarea>
</div>
`;

exports[`Storybook snapshots > Exercise > Analyzing 1`] = `
<div>
  <div
    class="_container_d9bc95"
  >
    <div
      class="_writingScreen_d9bc95"
    >
      <h2
        class="_wordPrompt_9155f4"
      >
        Harbor
      </h2>
      <textarea
        class="_textarea_4a5fca"
        disabled=""
        style="height: 0px;"
      >
        The old wool blanket scratched against her arms as the sharp scent of cedar filled the room. Outside, rain hammered the tin roof in a steady roar. Her tongue still held the bitter aftertaste of cold coffee.
      </textarea>
      <p
        class="_analyzingText_d9bc95"
      >
        Analyzing…
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook snapshots > Exercise > Done 1`] = `
<div>
  <div
    class="_container_d9bc95"
  >
    <h2
      class="_wordPrompt_9155f4"
    >
      Harbor
    </h2>
    <div
      class="_results_24d65d"
    >
      <div>
        <p
          class="_text_bf57ab"
        >
          <span>
            The old wool blanket 
          </span>
          <mark
            class="_highlight_bf57ab"
            data-sense="touch"
            style="background-color: rgb(206, 147, 216);"
          >
            scratched against her arms
          </mark>
          <span>
             as the 
          </span>
          <mark
            class="_highlight_bf57ab"
            data-sense="smell"
            style="background-color: rgb(165, 214, 167);"
          >
            sharp scent of cedar
          </mark>
          <span>
             filled the room. Outside, 
          </span>
          <mark
            class="_highlight_bf57ab"
            data-sense="sound"
            style="background-color: rgb(128, 222, 234);"
          >
            rain hammered the tin roof
          </mark>
          <span>
             in a steady roar. Her tongue still held the 
          </span>
          <mark
            class="_highlight_bf57ab"
            data-sense="taste"
            style="background-color: rgb(239, 154, 154);"
          >
            bitter aftertaste of cold coffee
          </mark>
          <span>
            .
          </span>
        </p>
        <div
          aria-label="color legend"
          class="_legend_bf57ab"
        >
          <span
            class="_legendItem_bf57ab"
          >
            <span
              class="_legendSwatch_bf57ab"
              style="background-color: rgb(206, 147, 216);"
            />
            touch
          </span>
          <span
            class="_legendItem_bf57ab"
          >
            <span
              class="_legendSwatch_bf57ab"
              style="background-color: rgb(165, 214, 167);"
            />
            smell
          </span>
          <span
            class="_legendItem_bf57ab"
          >
            <span
              class="_legendSwatch_bf57ab"
              style="background-color: rgb(128, 222, 234);"
            />
            sound
          </span>
          <span
            class="_legendItem_bf57ab"
          >
            <span
              class="_legendSwatch_bf57ab"
              style="background-color: rgb(239, 154, 154);"
            />
            taste
          </span>
        </div>
      </div>
      <div
        class="_score_9c889d"
      >
        <p
          class="_stat_9c889d"
        >
          Words written: 
          37
        </p>
        <p
          class="_stat_9c889d"
        >
          Senses used: 
          4
        </p>
        <ul
          class="_senseList_9c889d"
        >
          <li
            class="_senseItem_9c889d"
          >
            touch
            : 
            1
          </li>
          <li
            class="_senseItem_9c889d"
          >
            smell
            : 
            1
          </li>
          <li
            class="_senseItem_9c889d"
          >
            sound
            : 
            1
          </li>
          <li
            class="_senseItem_9c889d"
          >
            taste
            : 
            1
          </li>
        </ul>
      </div>
      <button
        class="_button_4f0108"
      >
        Start New Exercise
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook snapshots > Exercise > Idle 1`] = `
<div>
  <div
    class="_container_d9bc95"
  >
    <div
      class="_idleScreen_d9bc95"
    >
      <div>
        <label
          class="_fieldLabel_d9bc95"
          for="api-key"
        >
          Anthropic API Key
        </label>
        <input
          aria-label="Anthropic API Key"
          class="_apiKeyInput_d9bc95"
          id="api-key"
          type="password"
          value=""
        />
      </div>
      <div>
        <span
          class="_fieldLabel_d9bc95"
        >
          Duration
        </span>
        <div
          class="_group_cb6788"
        >
          <label
            class="_option_cb6788"
          >
            <input
              name="duration"
              type="radio"
              value="1"
            />
            1s
          </label>
          <label
            class="_option_cb6788"
          >
            <input
              name="duration"
              type="radio"
              value="10"
            />
            10s
          </label>
          <label
            class="_option_cb6788"
          >
            <input
              name="duration"
              type="radio"
              value="30"
            />
            30s
          </label>
          <label
            class="_option_cb6788"
          >
            <input
              checked=""
              name="duration"
              type="radio"
              value="600"
            />
            10m
          </label>
        </div>
      </div>
      <button
        class="_button_4f0108"
        disabled=""
      >
        Start
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook snapshots > Exercise > Running 1`] = `
<div>
  <div
    class="_container_d9bc95"
  >
    <div
      class="_writingScreen_d9bc95"
    >
      <h2
        class="_wordPrompt_9155f4"
      >
        Harbor
      </h2>
      <div
        class="_timer_968666"
      >
        10
        :
        00
      </div>
      <textarea
        class="_textarea_4a5fca"
        style="height: 0px;"
      >
        The old wool blanket scratched against her arms as the sharp scent of cedar filled the room. Outside, rain hammered the tin roof in a steady roar. Her tongue still held the bitter aftertaste of cold coffee.
      </textarea>
    </div>
  </div>
</div>
`;

exports[`Storybook snapshots > HighlightedText > Default 1`] = `
<div>
  <div>
    <p
      class="_text_bf57ab"
    >
      <span>
        The 
      </span>
      <mark
        class="_highlight_bf57ab"
        data-sense="sight"
        style="background-color: rgb(255, 241, 118);"
      >
        crimson sunset blazed
      </mark>
      <span>
         over the hills as 
      </span>
      <mark
        class="_highlight_bf57ab"
        data-sense="sound"
        style="background-color: rgb(128, 222, 234);"
      >
        thunder rumbled
      </mark>
      <span>
         across the valley; 
      </span>
      <mark
        class="_highlight_bf57ab"
        data-sense="smell"
        style="background-color: rgb(165, 214, 167);"
      >
        woodsmoke drifted past
      </mark>
      <span>
        , 
      </span>
      <mark
        class="_highlight_bf57ab"
        data-sense="taste"
        style="background-color: rgb(239, 154, 154);"
      >
        bitter coffee
      </mark>
      <span>
         
      </span>
      <mark
        class="_highlight_bf57ab"
        data-sense="touch"
        style="background-color: rgb(206, 147, 216);"
      >
        cooled against her palm
      </mark>
      <span>
        , her 
      </span>
      <mark
        class="_highlight_bf57ab"
        data-sense="kinesthetic"
        style="background-color: rgb(144, 202, 249);"
      >
        heart hammered with effort
      </mark>
      <span>
        , and 
      </span>
      <mark
        class="_highlight_bf57ab"
        data-sense="organic"
        style="background-color: rgb(255, 204, 128);"
      >
        deep in her gut something ancient stirred
      </mark>
      <span>
        .
      </span>
    </p>
    <div
      aria-label="color legend"
      class="_legend_bf57ab"
    >
      <span
        class="_legendItem_bf57ab"
      >
        <span
          class="_legendSwatch_bf57ab"
          style="background-color: rgb(255, 241, 118);"
        />
        sight
      </span>
      <span
        class="_legendItem_bf57ab"
      >
        <span
          class="_legendSwatch_bf57ab"
          style="background-color: rgb(128, 222, 234);"
        />
        sound
      </span>
      <span
        class="_legendItem_bf57ab"
      >
        <span
          class="_legendSwatch_bf57ab"
          style="background-color: rgb(165, 214, 167);"
        />
        smell
      </span>
      <span
        class="_legendItem_bf57ab"
      >
        <span
          class="_legendSwatch_bf57ab"
          style="background-color: rgb(239, 154, 154);"
        />
        taste
      </span>
      <span
        class="_legendItem_bf57ab"
      >
        <span
          class="_legendSwatch_bf57ab"
          style="background-color: rgb(206, 147, 216);"
        />
        touch
      </span>
      <span
        class="_legendItem_bf57ab"
      >
        <span
          class="_legendSwatch_bf57ab"
          style="background-color: rgb(144, 202, 249);"
        />
        kinesthetic
      </span>
      <span
        class="_legendItem_bf57ab"
      >
        <span
          class="_legendSwatch_bf57ab"
          style="background-color: rgb(255, 204, 128);"
        />
        organic
      </span>
    </div>
  </div>
</div>
`;

exports[`Storybook snapshots > RadioGroup > Default 1`] = `
<div>
  <div
    class="_group_cb6788"
  >
    <label
      class="_option_cb6788"
    >
      <input
        name="duration"
        type="radio"
        value="10"
      />
      10s
    </label>
    <label
      class="_option_cb6788"
    >
      <input
        name="duration"
        type="radio"
        value="30"
      />
      30s
    </label>
    <label
      class="_option_cb6788"
    >
      <input
        name="duration"
        type="radio"
        value="600"
      />
      10m
    </label>
  </div>
</div>
`;

exports[`Storybook snapshots > RadioGroup > Disabled 1`] = `
<div>
  <div
    class="_group_cb6788"
  >
    <label
      class="_option_cb6788"
    >
      <input
        disabled=""
        name="duration"
        type="radio"
        value="10"
      />
      10s
    </label>
    <label
      class="_option_cb6788"
    >
      <input
        disabled=""
        name="duration"
        type="radio"
        value="30"
      />
      30s
    </label>
    <label
      class="_option_cb6788"
    >
      <input
        checked=""
        disabled=""
        name="duration"
        type="radio"
        value="600"
      />
      10m
    </label>
  </div>
</div>
`;

exports[`Storybook snapshots > RadioGroup > Selected 1`] = `
<div>
  <div
    class="_group_cb6788"
  >
    <label
      class="_option_cb6788"
    >
      <input
        name="duration"
        type="radio"
        value="10"
      />
      10s
    </label>
    <label
      class="_option_cb6788"
    >
      <input
        name="duration"
        type="radio"
        value="30"
      />
      30s
    </label>
    <label
      class="_option_cb6788"
    >
      <input
        checked=""
        name="duration"
        type="radio"
        value="600"
      />
      10m
    </label>
  </div>
</div>
`;

exports[`Storybook snapshots > Results > Default 1`] = `
<div>
  <div
    class="_results_24d65d"
  >
    <div>
      <p
        class="_text_bf57ab"
      >
        <span>
          The 
        </span>
        <mark
          class="_highlight_bf57ab"
          data-sense="smell"
          style="background-color: rgb(165, 214, 167);"
        >
          sharp scent of pine
        </mark>
        <span>
           filled the 
        </span>
        <mark
          class="_highlight_bf57ab"
          data-sense="touch"
          style="background-color: rgb(206, 147, 216);"
        >
          cold air
        </mark>
        <span>
           as 
        </span>
        <mark
          class="_highlight_bf57ab"
          data-sense="sound"
          style="background-color: rgb(128, 222, 234);"
        >
          leaves rustled
        </mark>
        <span>
           overhead.
        </span>
      </p>
      <div
        aria-label="color legend"
        class="_legend_bf57ab"
      >
        <span
          class="_legendItem_bf57ab"
        >
          <span
            class="_legendSwatch_bf57ab"
            style="background-color: rgb(165, 214, 167);"
          />
          smell
        </span>
        <span
          class="_legendItem_bf57ab"
        >
          <span
            class="_legendSwatch_bf57ab"
            style="background-color: rgb(206, 147, 216);"
          />
          touch
        </span>
        <span
          class="_legendItem_bf57ab"
        >
          <span
            class="_legendSwatch_bf57ab"
            style="background-color: rgb(128, 222, 234);"
          />
          sound
        </span>
      </div>
    </div>
    <div
      class="_score_9c889d"
    >
      <p
        class="_stat_9c889d"
      >
        Words written: 
        13
      </p>
      <p
        class="_stat_9c889d"
      >
        Senses used: 
        3
      </p>
      <ul
        class="_senseList_9c889d"
      >
        <li
          class="_senseItem_9c889d"
        >
          smell
          : 
          1
        </li>
        <li
          class="_senseItem_9c889d"
        >
          touch
          : 
          1
        </li>
        <li
          class="_senseItem_9c889d"
        >
          sound
          : 
          1
        </li>
      </ul>
    </div>
    <button
      class="_button_4f0108"
    >
      Start New Exercise
    </button>
  </div>
</div>
`;

exports[`Storybook snapshots > Score > Default 1`] = `
<div>
  <div
    class="_score_9c889d"
  >
    <p
      class="_stat_9c889d"
    >
      Words written: 
      42
    </p>
    <p
      class="_stat_9c889d"
    >
      Senses used: 
      3
    </p>
    <ul
      class="_senseList_9c889d"
    >
      <li
        class="_senseItem_9c889d"
      >
        smell
        : 
        1
      </li>
      <li
        class="_senseItem_9c889d"
      >
        touch
        : 
        1
      </li>
      <li
        class="_senseItem_9c889d"
      >
        sound
        : 
        1
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storybook snapshots > TextArea > Default 1`] = `
<div>
  <textarea
    class="_textarea_4a5fca"
  />
</div>
`;

exports[`Storybook snapshots > TextArea > Disabled 1`] = `
<div>
  <textarea
    class="_textarea_4a5fca"
    disabled=""
  >
    The old wooden chair creaked under the weight of memory.
  </textarea>
</div>
`;

exports[`Storybook snapshots > TextArea > WithText 1`] = `
<div>
  <textarea
    class="_textarea_4a5fca"
  >
    The old wooden chair creaked under the weight of memory.
  </textarea>
</div>
`;

exports[`Storybook snapshots > Timer > Default 1`] = `
<div>
  <div
    class="_timer_968666"
  >
    10
    :
    00
  </div>
</div>
`;

exports[`Storybook snapshots > WordPrompt > Default 1`] = `
<div>
  <h2
    class="_wordPrompt_9155f4"
  >
    campfire
  </h2>
</div>
`;
